
Version 3.08  2012-05-17
 * FAST_MAX_LOCAL_IP_ADDRS change from 4 to 16

Version 3.07  2012-05-13
 * tracker/tracker_mem.c: check storage ip address is not empty
 * remove direct IO support
 * trunk binlog sync optimization
 * php extension compile passed in PHP 5.4.0
 * get local ip addresses enhancement
 * trunk server select the storage server whose binglog file size is max
 * sync trunk binlog file correctly when trunk server changed

Version 3.06  2012-01-22
 * add common/avl_tree.h and common/avl_tree.c
 * organize trunk free blocks using AVL tree
 * find the trunk server for each group when current tracker be a leader
 * common/sched_thread.c can add schedule entry dynamicly
 * support creating trunk file advancely

Version 3.05  2011-12-20
 * remove compile warnings
 * storage server's store_path_count can be more than that of group
 * bug fixed: common/fast_mblock.c malloc bytes are not enough
 * make.sh support OS: HP-UX

Version 3.04  2011-11-25
 * bug fixed: duplicate files only save one entry ok with trunk file mode
 * bug fixed: sync correctly with more binlog files
 * fdfs_file_info query file info from storage server
 * bug fixed: php extension compile error using gcc 4.6.1 as:
   variable 'store_path_index' set but not used
 * bug fixed: delete the metadata of trunked file correctly
 * bug fixed: append file ok when check duplicate is on
 * storage/trunk_mgr/trunk_shared.[hc]: trunk_file_stat_func do not 
   use function pointer
 * bug fixed: storage/trunk_mgr/trunk_shared.c base64_decode_auto 
   overflow 1 byte
 * bug fixed: delete slave file correctly
 * bug fixed: remove debug info
 * md5 function name changed to avoid conflict

Version 3.03  2011-10-16
 * ignore existed link when sync link file
 * http token checking support persistent token
 * add functions: storage_file_exist and storage_file_exist1
 * php minfo add fastdfs version info
 * make.sh changed
 * client move libevent dependency

Version 3.02  2011-09-18