@@ -13,16 +13,19 @@
 
 #include "storage_func.h"
 
-#define STORAGE_OP_TYPE_SOURCE_CREATE_FILE	'C'
-#define STORAGE_OP_TYPE_SOURCE_APPEND_FILE	'A'
-#define STORAGE_OP_TYPE_SOURCE_DELETE_FILE	'D'
-#define STORAGE_OP_TYPE_SOURCE_UPDATE_FILE	'U'
-#define STORAGE_OP_TYPE_SOURCE_CREATE_LINK	'L'
+#define STORAGE_OP_TYPE_SOURCE_CREATE_FILE	'C'  //upload file
+#define STORAGE_OP_TYPE_SOURCE_APPEND_FILE	'A'  //append file
+#define STORAGE_OP_TYPE_SOURCE_DELETE_FILE	'D'  //delete file
+#define STORAGE_OP_TYPE_SOURCE_UPDATE_FILE	'U'  //for whole file update such as metadata file
+#define STORAGE_OP_TYPE_SOURCE_MODIFY_FILE	'M'  //for part modify
+#define STORAGE_OP_TYPE_SOURCE_CREATE_LINK	'L'  //create symbol link
 #define STORAGE_OP_TYPE_REPLICA_CREATE_FILE	'c'
 #define STORAGE_OP_TYPE_REPLICA_APPEND_FILE	'a'
 #define STORAGE_OP_TYPE_REPLICA_DELETE_FILE	'd'
 #define STORAGE_OP_TYPE_REPLICA_UPDATE_FILE	'u'
+#define STORAGE_OP_TYPE_REPLICA_MODIFY_FILE	'm'
 #define STORAGE_OP_TYPE_REPLICA_CREATE_LINK	'l'
+
 #define STORAGE_BINLOG_BUFFER_SIZE		64 * 1024
 #define STORAGE_BINLOG_LINE_SIZE		256
 
