@@ -82,6 +82,9 @@
 #define STORAGE_PROTO_CMD_TRUNK_DELETE_BINLOG_MARKS  32  //since V3.07
 #define STORAGE_PROTO_CMD_TRUNK_TRUNCATE_BINLOG_FILE 33  //since V3.07
 
+#define STORAGE_PROTO_CMD_MODIFY_FILE		     34  //since V3.07
+#define STORAGE_PROTO_CMD_SYNC_MODIFY_FILE	     35  //since V3.07
+
 //for overwrite all old metadata
 #define STORAGE_SET_METADATA_FLAG_OVERWRITE	'O'
 #define STORAGE_SET_METADATA_FLAG_OVERWRITE_STR	"O"
