@@ -1,6 +1,7 @@
 
 Version 3.08  2012-05-17
  * FAST_MAX_LOCAL_IP_ADDRS change from 4 to 16
+ * appender file support modify
 
 Version 3.07  2012-05-13
  * tracker/tracker_mem.c: check storage ip address is not empty
